Upgraded dependencies; refactored properties to YAML; code refactoring; updated Dockerfile